Fix hover effect on mobile

--- a/src/components/post/Post.module.scss
+++ b/src/components/post/Post.module.scss
@@ -3,18 +3,16 @@
   background: var(--cmm-color-surface-0);
   position: relative;
 
+  &.link:hover {
+    background: var(--cmm-color-surface-1);
+    cursor: pointer;
+  }
+
   // disable hover effect on mobile devices
   // 32rem is just a magic number...
   @media screen and (max-width: 32rem) {
-    &:hover {
+    &.link:hover {
       background: var(--cmm-color-surface-0);
-    }
-  }
-
-  &.link {
-    &:hover {
-      background: var(--cmm-color-surface-1);
-      cursor: pointer;
     }
   }
 }
